k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app
  namespace: hjtest
  labels:
    app: spring-boot-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: spring-boot-app
